--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,8 @@
 # Declare files that will always have LF line endings (Linux mode) on checkout.
 * text eol=lf
 # Denote all files that are truly binary and should not be modified.
-*.pdf binary
+*.pdf filter=lfs diff=lfs merge=lfs -text
 *.png binary
 *.jpg binary
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
